# tracking-program

./: Anchor.toml  README.md
client/: client.ts
idl/: solrip_contract.json
programs/solrip-contract/: Cargo.toml
programs/solrip-contract/src/: lib.rs
tests/: anchor.ts
types/: solrip_contract.ts
